<resources>
    <string name="product_name">Product name</string>
    <string name="shop_address">Shop address</string>
    <string name="product_prize">Product prize</string>
    <string name="product_add">Add product to database</string>
    <string name="prize_TV">Prize:</string>
    <string name="prize">Prize is</string>
    <string name="currency_TV">zł</string>
    <string name="zl">Polish zloty</string>
    <string name="list_append">Add to shopping list</string>
    <string name="comma">,</string>
    <string name="category_choose">Choose category</string>
    <string name="shop_choose">Choose shop name</string>
    <string name="category">Category</string>
    <string name="shop_name">Shop name</string>
    <string name="app_name">Product Hunter</string>
    <string name="quantity">Product count</string>
    <string name="list_product_decrement">Decrease  the number of product by one</string>
    <string name="list_product_increment">Increase  the number of product by one</string>
    <string name="products_show">Show products</string>
    <string name="search">Search…</string>
    <string name="shop_all">All shops</string>
    <string name="quantity_TV">Count:</string>
    <string name="total_prize">Total prize:</string>
    <string name="shoplist_name_TV">Your shopping list</string>
    <string name="settings">Settings</string>
    <string name="product_report">Report invalid product</string>
    <string name="shoplist_save_TV">Save current shopping list</string>
    <string name="shoplist_saved_list_TV">Load shopping list</string>
    <string name="acc_settings">Account settings</string>
    <string name="rate_app">Rate app</string>
    <string name="report_problem">Report a problem</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="shoplist_product_delete_TV">Delete product from shopping list</string>
    <string name="profil">Profil</string>
    <string name="shoplist_name_TV2">Shopping list</string>
    <string name="home" translatable="false">Home</string>

    <string-array name="shop_name_list">
        <item>Biedronka</item>
        <item>Lidl</item>
        <item>Żabka</item>
    </string-array>
    <string-array name="category_name_list">
        <item>Nabiał</item>
        <item>Owoce</item>
        <item>Pieczywo</item>
        <item>Słodycze</item>
        <item>Woda</item>
    </string-array>

    <string name="shoplist_save">Shopping list saved successfully</string>
    <string name="product_add_err">Please fill all forms correctly</string>
    <string name="shoplist_product_add">Product added to shopping list:</string>
    <string name="shoplist_product_add_err">is already on the list</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="products_not_found_err">Products not found</string>
    <string name="shoplist_delete_product">Deleted from shopping list:</string>
    <string name="shoplist_name">Save shopping list</string>
    <string name="save">Save</string>
    <string name="shoplist_filter_name_err">List is empty or the name was not provided</string>
    <string name="shoplist_choose">Choose list to load</string>
    <string name="shoplist_loaded">Shopping list successfully loaded</string>
    <string name="shoplist_none">No available shopping list</string>
    <string name="enter_name">Enter list name</string>
    <string name="scanner">Scanner</string>
    <string name="scan_code">Scan code</string>
    <string name="capture_failed">Capture failed</string>
    <string name="permissions_needed">Permissions not granted</string>
    <string name="scanning_failed">Barcode scanning failed</string>
    <string name="find_product">Find product online</string>
    <string name="product_code">Product code: </string>
    <string name="no_code_found">No code found in the image</string>
</resources>